--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -141,6 +141,43 @@
   file = {/home/carlos-sia/Zotero/storage/6LXANU4I/1989762.html}
 }
 
+@article{ladson1988effects,
+  title={Effects of independent variation of Mach and Reynolds numbers on the low-speed aerodynamic characteristics of the NACA 0012 airfoil section},
+  author={Ladson, Charles L},
+  year={1988}
+}
+
+@article{ladson1987pressure,
+  title={Pressure distributions from high Reynolds number transonic tests of an NACA 0012 airfoil in the Langley 0.3-meter transonic cryogenic tunnel},
+  author={Ladson, Charles L and Hill, Acquilla S and Johnson Jr, William G},
+  year={1987}
+}
+@article{coutanceau1977experimental,
+  title={Experimental determination of the main features of the viscous flow in the wake of a circular cylinder in uniform translation. Part 1. Steady flow},
+  author={Coutanceau, Madeleine and Bouard, Roger},
+  journal={Journal of Fluid Mechanics},
+  volume={79},
+  number={2},
+  pages={231--256},
+  year={1977},
+  publisher={Cambridge University Press}
+}
+@article{inoue2002sound,
+  title={Sound generation by a two-dimensional circular cylinder in a uniform flow},
+  author={Inoue, Osamu and Hatakeyama, Nozomu},
+  journal={Journal of Fluid Mechanics},
+  volume={471},
+  pages={285--314},
+  year={2002},
+  publisher={Cambridge University Press}
+}
+@article{schmitt1979pressure,
+  title={Pressure distributions on the ONERA M6-wing at transonic mach numbers, experimental data base for computer program assessment},
+  author={Schmitt, V},
+  journal={AGARD AR-138},
+  year={1979}
+}
+
 @book{wilcox1998turbulence,
   title = {Turbulence Modeling for {{CFD}}},
   author = {Wilcox, David C and others},
